[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/title_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/camera.gd" type="Script" id=2]
[ext_resource path="res://sprites/end.png" type="Texture" id=3]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/font.tres" type="DynamicFont" id=5]
[ext_resource path="res://scripts/main.gd" type="Script" id=6]
[ext_resource path="res://scripts/hud.gd" type="Script" id=7]
[ext_resource path="res://sprites/cursor2.png" type="Texture" id=8]
[ext_resource path="res://sprites/cursor4.png" type="Texture" id=9]
[ext_resource path="res://sprites/cursor3.png" type="Texture" id=10]
[ext_resource path="res://sprites/cursor1.png" type="Texture" id=11]
[ext_resource path="res://sfx/hero.wav" type="AudioStream" id=12]
[ext_resource path="res://sprites/knight4.png" type="Texture" id=13]
[ext_resource path="res://sprites/knight1.png" type="Texture" id=14]
[ext_resource path="res://sprites/knight2.png" type="Texture" id=15]
[ext_resource path="res://sprites/knight3.png" type="Texture" id=16]
[ext_resource path="res://scripts/hero.gd" type="Script" id=17]
[ext_resource path="res://sfx/hit.wav" type="AudioStream" id=18]
[ext_resource path="res://sfx/jump.wav" type="AudioStream" id=19]
[ext_resource path="res://sprites/knight5.png" type="Texture" id=20]
[ext_resource path="res://sfx/jump2.wav" type="AudioStream" id=21]
[ext_resource path="res://sprites/loading.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ) ],
"loop": true,
"name": "anim",
"speed": 30.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 20 ) ],
"loop": false,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 13 ) ],
"loop": true,
"name": "jump",
"speed": 30.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 16 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 15.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15.5, 12 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="TitleScreen" parent="." instance=ExtResource( 1 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -6.0

[node name="Player" parent="." instance=ExtResource( 4 )]
physics_interpolation_mode = 2
position = Vector2( 0, 8 )
horizontal_speed = 10.0

[node name="Camera" type="Camera2D" parent="Player"]
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
limit_left = -320
limit_top = -180
limit_right = 320
limit_bottom = 180
smoothing_speed = 10.0
script = ExtResource( 2 )

[node name="Hud" type="CanvasLayer" parent="Player/Camera"]
script = ExtResource( 7 )

[node name="Time" type="Node2D" parent="Player/Camera/Hud"]
position = Vector2( 1152, 16 )
scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="Player/Camera/Hud/Time"]
margin_left = -64.0
margin_top = -8.0
margin_right = 64.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 5 )
text = "time | 00:00"
align = 2

[node name="Tick" type="Timer" parent="Player/Camera/Hud/Time"]

[node name="Deaths" type="Node2D" parent="Player/Camera/Hud"]
position = Vector2( 1152, 34 )
scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="Player/Camera/Hud/Deaths"]
margin_left = -64.0
margin_top = -8.0
margin_right = 64.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 5 )
text = "Deaths: 103249"
align = 2

[node name="Message" type="Node2D" parent="Player/Camera/Hud"]
position = Vector2( 27, 0 )
scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="Player/Camera/Hud/Message"]
margin_left = -13.0
margin_top = 75.5
margin_right = 627.0
margin_bottom = 100.5
custom_fonts/font = ExtResource( 5 )
text = "hit the hero from the
bottom into danger!"
align = 1

[node name="Close" type="Timer" parent="Player/Camera/Hud/Message"]
wait_time = 1.5
one_shot = true

[node name="Transition" type="Sprite" parent="Player/Camera/Hud"]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 22 )

[node name="End" type="Sprite" parent="Player/Camera/Hud"]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 3 )

[node name="Cursor" type="AnimatedSprite" parent="Player"]
position = Vector2( 24, 0 )
frames = SubResource( 1 )
animation = "anim"

[node name="Hero" type="KinematicBody2D" parent="."]
position = Vector2( 288, -144 )
z_index = 5
collision_layer = 0
script = ExtResource( 17 )
fall_speed = 3.0
horizontal_speed = 10.0
jump_height = 150.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Hero"]
frames = SubResource( 2 )
animation = "hit"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hero"]
position = Vector2( 0, 0.5 )
shape = SubResource( 3 )

[node name="Sensor" type="Area2D" parent="Hero" groups=["hero"]]
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hero/Sensor"]
position = Vector2( -0.5, -3 )
shape = SubResource( 4 )

[node name="Hitbox" type="Area2D" parent="Hero" groups=["hero2"]]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hero/Hitbox"]
position = Vector2( 0, 14 )
shape = SubResource( 5 )

[node name="End" type="Timer" parent="Hero"]
one_shot = true

[node name="Death" type="AudioStreamPlayer2D" parent="Hero"]
stream = ExtResource( 12 )

[node name="Hit" type="AudioStreamPlayer2D" parent="Hero"]
stream = ExtResource( 18 )

[node name="Jump" type="AudioStreamPlayer2D" parent="Hero"]
stream = ExtResource( 19 )

[node name="Transition" type="Timer" parent="."]
one_shot = true

[node name="Shroom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )

[connection signal="tree_exited" from="TitleScreen" to="." method="_on_TitleScreen_tree_exited"]
[connection signal="tree_exited" from="TitleScreen" to="Player" method="_on_TitleScreen_tree_exited"]
[connection signal="tree_exited" from="TitleScreen" to="Player/Camera" method="_on_TitleScreen_tree_exited"]
[connection signal="tree_exited" from="TitleScreen" to="Player/Camera/Hud" method="_on_TitleScreen_tree_exited"]
[connection signal="tree_exited" from="TitleScreen" to="Hero" method="_on_TitleScreen_tree_exited"]
[connection signal="restart" from="Player" to="." method="_on_Player_restart"]
[connection signal="restart" from="Player" to="Hero" method="_on_Player_restart"]
[connection signal="timeout" from="Player/Camera/Hud/Time/Tick" to="Player/Camera/Hud" method="_on_Tick_timeout"]
[connection signal="timeout" from="Player/Camera/Hud/Message/Close" to="Player/Camera/Hud" method="_on_Close_timeout"]
[connection signal="animation_finished" from="Player/Cursor" to="Player" method="_on_Cursor_animation_finished"]
[connection signal="next_level" from="Hero" to="." method="_on_Hero_next_level"]
[connection signal="body_entered" from="Hero/Sensor" to="Hero" method="_on_Sensor_body_entered"]
[connection signal="area_entered" from="Hero/Hitbox" to="Hero" method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hero/Hitbox" to="Hero" method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Hero/End" to="Player" method="_on_End_timeout"]
[connection signal="timeout" from="Hero/End" to="Player/Camera/Hud" method="_on_End_timeout"]
[connection signal="timeout" from="Transition" to="." method="_on_Transition_timeout"]
[connection signal="timeout" from="Transition" to="Player" method="_on_Transition_timeout"]
[connection signal="timeout" from="Transition" to="Player/Camera/Hud" method="_on_Transition_timeout"]
[connection signal="timeout" from="Transition" to="Hero" method="_on_Transition_timeout"]
